--- a/Privacidade.html
+++ b/Privacidade.html
@@ -97,7 +97,7 @@
                 <li class=""><a href="https://web.telegram.org/z/" target="_blank"> <img src="img/Telegram.png"
                             height="50px" alt="Logo do Telegram"> </a></li>
                 <li class=""><a href="https://www.linkedin.com/home/?originalSubdomain=br" target="_blank"> <img
-                            src="img/Linkedin.png" height="50px" alt="Logo do Linkedin"> </a></li>
+                            src="img/LinkedIn.png" height="50px" alt="Logo do Linkedin"> </a></li>
                 <li class=""><a href="https://twitter.com/login?lang=pt" target="_blank"> <img src="img/Twitter.png"
                             height="50px" alt="Logo do Twitter"> </a></li>
             </ul>
